# rust-issues-collection

./: .gitignore  AGENTS.md  EXISTING_SUBMISSIONS.md  Mutex_or_Arc.md  README.md  SUBMISSION_TEMPLATE_Pin_Self_Referential.md  SUBMISSION_TEMPLATE_RefCell_Panic.md  find_issue.md  templete.md
rust-logout-issue/: Cargo.toml  README.md
rust-logout-issue/src/: main.rs  problem.rs  solution.rs
submissions/: sealed-trait-example.rs
submissions/arc-strong-count-shutdown/: README.md  SUBMISSION.md
submissions/arc-strong-count-shutdown/broken-example/: Cargo.toml
submissions/async-drop-trap/: SUBMISSION.md
submissions/backwards-pagination/: BACKWARDS_PAGINATION_ISSUE_CN.md  FAQ.md  SUBMISSION.md
submissions/closure-ffi-abi/: README.md  SUBMISSION.md
submissions/pin-self-referential/: README.md  SUBMISSION.md
submissions/refcell-double-borrow-panic/: README.md
submissions/room-displayname-type-safety/: SUBMISSION.md
submissions/target-feature-illegal-instruction/: SUBMISSION.md
submissions/thread-local-ui-safety/: SUBMISSION.md
submissions/tokio-runtime-sharing/: README.md  SUBMISSION.md
submissions/tokio-runtime-sharing/broken-example/: Cargo.toml  README.md
submissions/tokio-runtime-sharing/broken-example/src/: arc_approach.rs  main.rs  mutex_approach.rs
submissions/tokio-runtime-sharing/correct-example/: Cargo.toml  README.md
submissions/tokio-runtime-sharing/correct-example/src/: main.rs
submissions/tokio-select-spin/: SUBMISSION.md
submissions/tokio-signal-fd-leak/: README.md  SUBMISSION.md
(+66 files in other folders)
